<resources>
    <string name="app_name">T2a6-Alzate-Eslem</string>
    <string name="welcome">Bienvenido</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_dni">DNI</string>
    <string name="enter">Entrar</string>
    <string name="exit">Salir</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="moreInfo">Mas informacion</string>
    <string name="changePass">Cambiar clave</string>
    <string name="information">Informacion</string>
    <string name="goOptions">Ir opciones</string>
</resources>
