<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fpmislata.practicas.t2a6_alzate_eslem.MainOptionsActivity"
    android:orientation="vertical">

    <Button
        android:text="@string/changePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/changePass"
        android:onClick="changePass"/>

    <Button
        android:text="Chollos disponibles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2" />

    <Button
        android:text="Top Chollos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3" />

    <Button
        android:text="Buscador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4" />

    <Button
        android:text="Mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5" />

    <Button
        android:text="Contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button6" />

    <Button
        android:text="@string/moreInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:onClick="info" />

    <Button
        android:text="@string/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exit"
        android:onClick="exit" />
</LinearLayout>
