<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fpmislata.practicas.t2a6_alzate_eslem.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:text="Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dni"
            android:maxLines="1"
            android:hint="@string/prompt_dni"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" />

        <EditText
            android:id="@+id/password_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:maxLines="1"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_gravity="end"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:layout_gravity="right"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:onClick="enter"
                android:layout_weight="1"
                android:elevation="14dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/exit"
                android:layout_gravity="right"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:onClick="exit"
                android:layout_weight="1"
                android:elevation="14dp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
